Ignore object filter in getRecords() as it could cause the method to not return one of the specified records.

--- a/src/classes/LtngSearchController.cls
+++ b/src/classes/LtngSearchController.cls
@@ -272,7 +272,7 @@ public with sharing class LtngSearchController {
 				context,
 				recordIdsByType.get(typeToken),
 				searchObject.getFieldNames(),
-				searchObject.filter
+				null
 			));
 		}
 
