Ignore QueryException when querying RecentlyViewed
For some unknown reason test methods occasionally fail due to the RecentlyViewed object not being available. Until Salesforce can fix this issue we will just ignore QueryException exceptions.

--- a/src/classes/LtngInputLookupDefaultProvider.cls
+++ b/src/classes/LtngInputLookupDefaultProvider.cls
@@ -76,13 +76,17 @@ global virtual class LtngInputLookupDefaultProvider implements LtngInputLookupPr
 	 * @return The recently viewed record IDs
 	 */
 	protected virtual List<Id> getRecentlyViewedRecordIds(String sObjectName) {
-		List<RecentlyViewed> records = [
-			SELECT Id
-			FROM RecentlyViewed
-			WHERE Type = :sObjectName
-			AND LastViewedDate != NULL
-			ORDER BY LastViewedDate DESC
-		];
+		List<RecentlyViewed> records = new List<RecentlyViewed>();
+		try {
+			records = [
+				SELECT Id
+				FROM RecentlyViewed
+				WHERE Type = :sObjectName
+				AND LastViewedDate != NULL
+				ORDER BY LastViewedDate DESC
+			];
+		} catch (QueryException e) {
+		}
 
 		List<Id> recordIds = new List<Id>();
 		for (RecentlyViewed record : records) {
